--- a/style-fb.css
+++ b/style-fb.css
@@ -9,7 +9,8 @@ h1 {
 	margin-bottom: -80px;
 	color: #f0f0f0;
 	border: 8px double #f0f0f0;
-	background-color: rgba(0,153,0,.4);
+	border-radius: 20px;
+	background-color: rgba(0,153,0,.8);
 	width: 30%;
 	margin-left: 35%;
 	margin-right: 35%;
@@ -19,7 +20,7 @@ h1 {
 	height: 450px;
 	border: 2px dotted #f0f0f0;
 	border-radius: 10px;
-	background-color: rgba(240,240,240,.7);
+	background-color: rgba(240,240,240,.8);
 	padding: 80px;
 	margin: 10% auto;
 }
@@ -40,4 +41,36 @@ h1 {
 	background: url('http://wcdn4.dataknet.com/static/resources/icons/set34/17f9a6c8.png');
 	background-size: 110px 110px;
     background-repeat: no-repeat;
+}
+#new-game {
+	width: 8%;
+	border: 2px dotted #f0f0f0;
+	border-radius: 10px;
+	background-color: rgba(0,153,0,.8);
+	padding: 3%;
+	margin: 5% auto;
+	color: #f0f0f0;
+	font-size: 16pt;
+	font-family: 'Oswald', sans-serif;
+	text-align: center;
+	position: absolute;
+	top: 5%;
+	left: 5%;
+}
+#win-count {
+	width: 8%;
+	border: 2px dotted #f0f0f0;
+	border-radius: 10px;
+	background-color: rgba(0,153,0,.8);
+	padding: 3%;
+	margin: 5% auto;
+	color: #f0f0f0;
+	font-size: 16pt;
+	font-family: 'Oswald', sans-serif;
+	text-align: center;
+	position: absolute;
+	/*top: 10px;
+	right: 40px;*/
+	top: 5%;
+	right: 5%;
 }
